--- a/profile.html
+++ b/profile.html
@@ -31,7 +31,7 @@
             <button type="button" onclick="updateProfile()">Update Profile</button>
         </form>
 
-        <a href="logout.php">Logout</a>
+        <a href="login.html">Logout</a>
 
         <script src="./js/profile.js"></script>
     </div>
